--- a/myproject/Cargo.toml
+++ b/myproject/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = "=1.0.78"
+serde_json = "=1.0.27"
+serde_derive = "=1.0.78"
+quick-error = "=1.2.2"
+failure = "=0.1.5"
+failure_derive = "=0.1.5"
+backtrace = "=0.3.18"
